--- a/index.html
+++ b/index.html
@@ -35,39 +35,44 @@
     </div>
     <!-- /header -->
 
+    <div role="main" class="ui-content">
+        <form>
+            <label for="range-1a">Description:</label>
+            <input type="text" id="DescriptionED" value="">
 
-    Description <input type="text" id="DescriptionED" value=""><br>
-    Class <input type="text" id="ClassED" value=""><br>
-    Date <input type="date" id="DateED" value=""><br>
+            <label for="range-1a">Class:</label>
+             <input type="text" id="ClassED" value="">
 
+            <label for="range-1a">Date:</label>
+             <input type="date" id="DateED" value="">
 
-    <script>
-        function myFunction() {
-            document.getElementById("DescriptionUI").value = document.getElementById("DescriptionED").value;
-            document.getElementById("ClassUI").value = document.getElementById("ClassED").value;
-            document.getElementById("DateUI").value = document.getElementById("DateED").value;
-        }
-    </script>
-
-    <form>
-                
-        <fieldset data-role="controlgroup">
-                    <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2a" value="on" checked="checked">
-                    <label for="radio-choice-v-2a">HomeWork</label>
-                    <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2b" value="off">
-                    <label for="radio-choice-v-2b">Assignments</label>
-                    <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2c" value="other">
-                    <label for="radio-choice-v-2c">Tests</label>
-                
-        </fieldset>
-    </form>
-
-        
+            <script>
+                function myFunction() {
+                    document.getElementById("DescriptionUI").value = document.getElementById("DescriptionED").value;
+                    document.getElementById("ClassUI").value = document.getElementById("ClassED").value;
+                    document.getElementById("DateUI").value = document.getElementById("DateED").value;
+                }
+            </script>
 
 
-    <button onclick="myFunction()">Copy Text</button>
-    <a href="#home" class="ui-btn">submit</a>
+                    
+            <fieldset data-role="controlgroup">
+                        <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2a" value="on" checked="checked">
+                        <label for="radio-choice-v-2a">HomeWork</label>
+                        <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2b" value="off">
+                        <label for="radio-choice-v-2b">Assignments</label>
+                        <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2c" value="other">
+                        <label for="radio-choice-v-2c">Tests</label>
+                    
+            </fieldset>
+        </form>
 
+            
+
+
+        <button onclick="myFunction()">Copy Text</button>
+        <a href="#home" class="ui-btn">submit</a>
+    </div>
 
 </div>
 <div id="home" data-role="page">
@@ -100,22 +105,32 @@
         <div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="false">
                 <h3>Assignments</h3>
-                <table border="1" style="width:100%">
+                <table data-role="table" id="homework-table" data-mode="reflow" class="ui-responsive">
+                    <thead>
+                    <tr>
+                        <th data-priority="1">Description</th>
+                        <th data-priority="2">Class</th>
+                        <th data-priority="3">Due Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td><input type="text" id="DescriptionUI" readonly><br></td>
                         <td><input type="text" id="ClassUI" readonly><br></td>
                         <td><input type="text" id="DateUI" readonly><br></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td></td>
                         <td></td>
                     </tr>
+                    </tbody>
+
                 </table>
             </div>
         </div>
