--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="phonegap.js"></script>
-    <title>Student HomeWork helper</title>
+    <title>Student Homewerx helper</title>
 </head>
 <body>
 
