working sqlite read

--- a/index.html
+++ b/index.html
@@ -228,16 +228,11 @@
     <div role="main" class="ui-content">
         <ul data-role="listview" data-filter="true" data-filter-placeholder="Search classes..." data-inset="true">
                 
-            <li><a href="#">Math</a></li>
-                
+            <li><a href="#">Math</a></li>    
             <li><a href="#">Science</a></li>
-                
             <li><a href="#">English</a></li>
-                
             <li><a href="#">Music</a></li>
-                
-            <li><a href="#">Geography</a></li>
-                
+            <li><a href="#">Geography</a></li>  
             <li><a href="#">Civics</a></li>
             <a href="#mainpage" class="ui-btn">Home</a>
         </ul>
@@ -248,4 +243,6 @@
 <script src="js/index.js"></script>
 
 </body>
+<div id="testpage" data-role="page">
+    <div role="main" class="ui-content">
 </html>
