--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#home" class="ui-btn">View Homework</a>
         <a href="#class" class="ui-btn">Add Class</a>
         <a href="#manageclass" class="ui-btn">Manage Classes</a>
-        <a href="#reset" class="ui-btn">Reset</a>
+        <a href="" class="ui-btn" onClick="resetData();">reset</a>
 
     </div>
 </div>
@@ -59,7 +59,7 @@
 
 
                     
-            <fieldset data-role="controlgroup">}
+            <fieldset data-role="controlgroup">
                 <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2a" value="on" checked="checked">
                 <label for="radio-choice-v-2a">HomeWork</label>
                 <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2b" value="off">
@@ -180,8 +180,8 @@
         </div>
         <a href="#mainpage" class="ui-btn">menu</a>
         <a href="#addtask" class="ui-btn">Add</a>
-		<a href="#home" class="ui-btn" onClick="saveFave()">WRITE</a>
-		<a href="#home" class="ui-btn" onClick="checkFave()">READ</a>
+		<a href="#home" class="ui-btn" onClick="saveInfo();">WRITE</a>
+		<a href="#home" class="ui-btn" onClick="checkInfo();">READ</a>
     </div>
 </div>
 
