--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="format-detection" content="telephone=no"/>
     <meta name="msapplication-tap-highlight" content="no"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/index.css"/>
-    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.mobile-1.4.5.min.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="css/index.css"/>-->
+    <!--<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>-->
+	<!--<link rel="stylesheet"  href="http://code.jquery.com/mobile/git/jquery.mobile-git.css" />-->
+	<!--<link rel="stylesheet" href="https://rawgithub.com/arschmitz/jquery-mobile-datepicker-wrapper/master/jquery.mobile.datepicker.css" />-->
+    <!--<script src="js/jquery.min.js"></script>-->
+    <!--<script src="js/jquery.mobile-1.4.5.min.js"></script>-->
 	<!--<script src="phonegap.js"></script>-->
 	<script src="js/index.js"></script>
+    <script src="https://rawgithub.com/jquery/jquery-ui/1-10-stable/ui/jquery.ui.datepicker.js"></script>
+    <script src="http://code.jquery.com/mobile/git/jquery.mobile-git.js"></script> 
+    <script src="https://rawgithub.com/arschmitz/jquery-mobile-datepicker-wrapper/master/jquery.mobile.datepicker.js"></script>
+	
     <title>Student HomeWork helper</title>
 </head>
 <body>
