--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<label for="DescriptionED">Description:</label>
             <input type="text" id="DescriptionED" value="">
             <label for="select-choice-a" class="select">Class</label>
-            <select name="select-choice-a" id="select-choice-a" data-native-menu="true">  
+            <select name="select-choice-a" id="Classes" data-native-menu="true">  
                 <option value="Math">Math</option>   
                 <option value="Science">Science</option>    
                 <option value="English">English</option>
@@ -59,21 +59,14 @@
                 <option value="Geography">Geography</option>
                 <option value="Civics">Civics</option>
 		</select>
+		  <label for="select-choice-a" class="select">Category</label>
+            <select name="select-choice-a" id="Category" data-native-menu="true">  
+                <option value="Homework">Homework</option>   
+                <option value="Assignments">Assignments</option>    
+                <option value="Tests">Tests</option>
+              
+		</select>
 		
-		
-			
-
-
-                    
-            <fieldset data-role="controlgroup">
-                <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2a" value="on" checked="checked">
-                <label for="radio-choice-v-2a">HomeWork</label>
-                <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2b" value="on">
-                <label for="radio-choice-v-2b">Assignments</label>
-                <input type="radio" name="radio-choice-v-2" id="radio-choice-v-2c" value="on">
-                 <label for="radio-choice-v-2c">Tests</label>
-                    
-            </fieldset>
         </form>
 		
 		
