Fixed date picker, now works

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css"/>
     <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/jquery.mobile-git.css" /> 
+	<link rel="stylesheet" type="text/css" href="css/homeworks.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.ui.datepicker.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
@@ -46,7 +47,7 @@
         <form>
             
 			<label for="DateED">Date:</label>
-            <input type="text" data-role="date" id="DateED" data-inline="true">
+            <input type="text" data-role="date" id="DateED" data-inline="false" class="datepicker">
 			
 			<label for="DescriptionED">Description:</label>
             <input type="text" id="DescriptionED" value="">
