--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 <option value="Tests">Tests</option>
               
 		</select>
-		
+		<a href="#home" class="ui-btn" onClick="writeInfo();">submit</a>
         </form>
 		
 		
-        <a href="#home" class="ui-btn" onClick="">submit</a>
+        
     </div>
-			
+
 </div>
 
 <!--add event page end-->
@@ -187,8 +187,8 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
         </div>
         <a href="#mainpage" class="ui-btn">menu</a>
         <a href="#addtask" class="ui-btn">Add</a>
-		<a href="#home" class="ui-btn" onClick="saveInfo();">WRITE</a>
-		<a href="#home" class="ui-btn" onClick="checkInfo();">READ</a>
+		<a href="#home" class="ui-btn" onClick="">WRITE</a>
+		<a href="#home" class="ui-btn" onClick="readInfo();">READ</a>
     </div>
 </div>
 
