for loop works page load event works

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
 		
 		<div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="true">
-                <h3>Homework</h3>
+				<h3>Homework</h3>
                 <table data-role="table" id="homework-table" data-mode="reflow" class="ui-responsive">
                     <thead>
                     <tr>
@@ -187,9 +187,8 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
         </div>
         <a href="#mainpage" class="ui-btn">menu</a>
         <a href="#addtask" class="ui-btn">Add</a>
-		<a href="#home" class="ui-btn" onClick="">WRITE</a>
-		<a href="#home" class="ui-btn" onClick="readInfo();">READ</a>
     </div>
+	
 </div>
 
 <!--view homework page end-->
@@ -200,6 +199,7 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
     <div role="main" class="ui-content">
         Input Class Here
         <input type="text" id="AddclassED"><br>
+		<a href="#home" class="ui-btn" onClick="AddClass();">Add class</a>
         <a href="#mainpage" class="ui-btn">Home</a>
     </div>
 </div>
