--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#class" class="ui-btn">Add Class</a>
         <a href="#manageclass" class="ui-btn">Manage Classes</a>
         <a href="" class="ui-btn" onClick="resetData();">reset</a>
-
+ 
     </div>
 </div>
 <!--home page end-->
@@ -91,7 +91,7 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
 		<div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="true">
 				<h3>Homework</h3>
-                <table data-role="table" id="homework-table" data-mode="reflow" class="ui-responsive">
+                <table data-role="table" id="homework-table" data-mode="" class="ui-responsive" >
                     <thead>
                     <tr>
                         <th data-priority="1">Due Date</th>
@@ -102,9 +102,9 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
                     </thead>
                     <tbody>
                     <tr>
-                        <td><input type="text" id="DateUI" readonly><br></td>
-                        <td><input type="text" id="DescriptionUI" readonly><br></td>
-                        <td><input type="text" id="ClassUI" readonly><br></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -124,7 +124,7 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
         <div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="true">
                 <h3>Assignments</h3>
-                <table data-role="table" id="homework-table" data-mode="reflow" class="ui-responsive">
+                <table data-role="table" id="assignment-table" data-mode="" class="ui-responsive">
                     <thead>
                     <tr>
                         <th data-priority="1">Description</th>
@@ -134,9 +134,9 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
                     </thead>
                     <tbody>
                     <tr>
-                        <td><input type="text" id="DescriptionUI" readonly><br></td>
-                        <td><input type="text" id="ClassUI" readonly><br></td>
-                        <td><input type="text" id="DateUI" readonly><br></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -156,7 +156,7 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
         <div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="true">
                 <h3>Tests</h3>
-                <table data-role="table" id="homework-table" data-mode="reflow" class="ui-responsive">
+                <table data-role="table" id="tests-table" data-mode="" class="ui-responsive">
                     <thead>
                     <tr>
                         <th data-priority="1">Description</th>
@@ -166,9 +166,9 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
                     </thead>
                     <tbody>
                     <tr>
-                        <td><input type="text" id="DescriptionUI" readonly><br></td>
-                        <td><input type="text" id="ClassUI" readonly><br></td>
-                        <td><input type="text" id="DateUI" readonly><br></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -231,4 +231,4 @@ document.getElementById("demo").innerHTML = new Date().toDateString();
 
 
 	
-	</html>
+</html>
