submit button now stays at the bottom of the screen.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div role="main" class="ui-content">
         <form>
-			
+			<a href="#mainpage" id="submitbutton" class="ui-btn" onClick="writeInfo();"><b>back</b></a>
 			<label for="DateED">Date:</label>
             <input type="text" data-role="date" id="DateED" data-inline="false" class="datepicker">
 			
@@ -68,7 +68,8 @@
              
 		</select>
 		
-		<a href="#home" id="submitbutton" class="ui-btn" onClick="writeInfo();">submit</a>
+		<a href="#home" id="submitbutton" class="ui-btn" onClick="writeInfo();"><b>submit</b></a>
+		
         </form>
 	
 		
