--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <option value="Tests">Tests</option>
 		</select>
 
-<a href="#home" id="submitbutton" class="ui-btn" onClick="writeInfo();"><b>Submit</b></a>
+<a href="#home" id="submitbutton" class="ui-btn" onClick="writeHomework();"><b>Submit</b></a>
 
 
 
@@ -199,7 +199,7 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
     <div role="main" class="ui-content">
         Input Class Here
         <input type="text" id="AddclassED"><br>
-		<a href="#home" class="ui-btn" onClick=>Add class</a>
+		<a href="#home" class="ui-btn" onClick="writeClass();">Add class</a>
         <a href="#mainpage" class="ui-btn">Home</a>
     </div>
 </div>
@@ -222,7 +222,9 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                     <tbody>
                     
             </div>
-        </div>
+			</div>
+        <a href="#home" id="submitbutton" class="ui-btn" ><b>Home</b></a>
+		
 <!--manange class page end-->
 
 <script src="js/index.js"></script>
