Classes save and read from the correct table

--- a/index.html
+++ b/index.html
@@ -210,21 +210,32 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
 
 
 <div id="manageclass" data-role="page">
-    <div data-role="collapsibleset">
+   <div data-role="collapsibleset">
             <div data-role="collapsible" data-collapsed="true">
-				<h3>classes</h3>
+                <h3>class</h3>
                 <table data-role="table" id="classesTab" data-mode="" class="ui-responsive">
-                    <thead>
-                    <tr>
-                        
-                    </tr>
-                    </thead>
                     <tbody>
-                    
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+
+                </table>
             </div>
-			</div>
-        <a href="#home" id="submitbutton" class="ui-btn" ><b>Home</b></a>
-		
+        </div>
+		</div>
 <!--manange class page end-->
 
 <script src="js/index.js"></script>
