Added buttons to the tables

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <div id="mainpage" data-role="page">
     <div role="main" class="ui-content">
 		<p></p>
-        <a href="#addtask" class="ui-btn">Add Event</a>
+        <a h1 href="#addtask" class="ui-btn">Add Event</a>
 		<p></p>
-        <a href="#home" class="ui-btn">View Homework</a>
+        <a h2 href="#home" class="ui-btn">View Homework</a>
 		<p></p>
-        <a href="#manageclass" class="ui-btn">Manage Classes</a>
+        <a h3 href="#manageclass" class="ui-btn">Manage Classes</a>
 		<p></p>
-        <a href="#yesno" class="ui-btn" onClick="resetData();">reset</a>
+        <a h4 href="#yesno" class="ui-btn" onClick="resetData();">reset</a>
 		<p></p>
 		
 		
@@ -99,6 +99,8 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                         <th data-priority="1">Due Date</th>
                         <th data-priority="2">Class</th>
                         <th data-priority="3">Description</th>
+						<th data-priority="4">Completed</th>
+						<th data-priority="5">Delete</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -131,6 +133,8 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                         <th data-priority="1">Due Date</th>
                         <th data-priority="2">Description</th>
                         <th data-priority="3">Class</th>
+						<th data-priority="4">Completed</th>
+						<th data-priority="5">Delete</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -163,6 +167,8 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                         <th data-priority="1">Due Date</th>
                         <th data-priority="2">Description</th>
                         <th data-priority="3">Class</th>
+						<th data-priority="4">Completed</th>
+						<th data-priority="5">Delete</th>
 						
                     </tr>
                     </thead>
