--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                     <thead>
                     <tr>
                         <th data-priority="1">Due Date</th>
-                        <th data-priority="2">Description</th>
-                        <th data-priority="3">Class</th>
-						<th data-priority="4">Completed</th>
-						<th data-priority="5">Delete</th>
+                        <th data-priority="2">Class</th>
+                        <th data-priority="3">Description</th>
+						<th data-priority="4">Edit</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -164,9 +163,9 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                     <thead>
                     <tr>
                         <th data-priority="1">Due Date</th>
-                        <th data-priority="2">Description</th>
-                        <th data-priority="3">Class</th>
-						<th data-priority="4">Completed</th>
+                        <th data-priority="2">Class</th>
+                        <th data-priority="3">Description</th>
+						<th data-priority="4">Edit</th>
 						
                     </tr>
                     </thead>
