working popup system

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div role="main" class="ui-content">
 	
 	<div data-role="header"> 
-	<h1>Add Your HomeWork Here</h1> 
+	<h1>Add HomeWork Tab</h1> 
 	<a href="#mainpage" class="ui-btn">Back</a>
 </div>
 	 <p></p>
