Testing new font size/type

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<p></p>
         <a h2 href="#home" class="ui-btn">View HomeWork</a>
 		<p></p>
-        <a h3 href="#manageclass" class="ui-btn">Add A Class</a>
+        <a h3 href="#manageclass" class="ui-btn">Classes</a>
 		<p></p>
         <a h4 href="#yesno" class="ui-btn" onClick="resetData();">Reset</a>
 		<p></p>
@@ -54,7 +54,7 @@
     <div role="main" class="ui-content">
 	
 	<div data-role="header"> 
-	<h1>Add HomeWork Tab</h1> 
+	<h1>HomeWork Tab</h1> 
 	<a href="#mainpage" class="ui-btn">Back</a>
 </div>
 	 <p></p>
@@ -207,7 +207,6 @@ document.getElementById("Date").innerHTML = new Date().toDateString();
                 </table>
             </div>
         </div>
-        <a href="#mainpage" class="ui-btn">menu</a>
         <a href="#addtask" class="ui-btn">Add</a>
     </div>
 	
